syntax = "proto3";

import "client_id.proto";

package protocols;
option go_package=".;protocols";

// 套接字已关闭
message Closed {
    network.ClientID ClientID = 1;
}

